--- a/设计模式.md
+++ b/设计模式.md
@@ -6,7 +6,7 @@
 
 ##### 1. 隔离变化、封装变化（易变的和不易变的区分开）
 
-- 把经常变化的部分提取出来并封装起来，易变以后轻易的修改和扩充。
+- 把经常变化的部分提取出来并封装起来，以便以后轻易的修改和扩充。
 
 ##### 2. 针对接口编程，不要针对实现编程
 
@@ -24,7 +24,18 @@
 
 
 
-### 1. 策略模式
+
+###  1. 简单工厂模式
+
+- **可维护** :只需要更改要改的地方，改的少
+- **可复用**
+- **可扩展**，只需要增加就能搞定
+- **灵活性**
+- **封装**、**继承**、**多态** 降低程序的耦合性
+- 紧耦合和松耦合：
+
+
+### 2. 策略模式
 
 - 定义了**算法族**，把他们封装起来，使他们之间可以**相互替换**。此模式使算法的变化独立于使用算法的用户。
 
@@ -34,7 +45,7 @@
 
   ![lantum](.\plantuml\plantuml\plantuml.png)
 
-### 2. 观察者模式：让你的对象知悉现状
+### 3. 观察者模式：让你的对象知悉现状
 
 - ​
 
