--- a/数据结构.md
+++ b/数据结构.md
@@ -125,11 +125,27 @@
 >
 > 数据空间不确定时，使用链式结构存储
 
+数组链表：数组里面存放链表的头指针。
+
+算法：**选择排序**：选择一个最大或最小值，放到另一个数组。时间复杂度O(n^2)
+
 ###### 静态链表
 
 用数组描述的链表叫静态链表。
 
+- 静态链表内存申请、释放的实现
+  - 之所以叫静态链表，就是应为内存静态申请好了，静态链表的内存申请就是管理数组的内存。
+- 静态链表的增删改查
+
+**静态链表相较于数组，只解决了增删操作需要移动后面元素的问题**
+
 ###### 循环链表
 
+将单链表的终端节点的指针指向其实头结点，就构成了循环链表。
+
+从任意一个结点开始，都能够遍历整个链表。
+
 ###### 双向链表
+
+在单链表的基础上添加一个前区指针。
 
