--- a/数据结构.md
+++ b/数据结构.md
@@ -121,6 +121,12 @@
   - 查询时间复杂度O(n)
   - 空间动态分配，不受最大空间限制
 
+| 操作 | 数组 | 链表 |
+| ---- | ---- | ---- |
+| 查询 | O(1)  常量时间 | O(n)  线性时间 |
+| 插入删除 | O(n)  线性时间 | O(1)  常量时间 |
+
+
 > *若线性表需要频繁的查询，很少增加删除，使用**顺序存储结构**；若频繁的增加删除，应该使用**链式存储结构***
 >
 > 数据空间不确定时，使用链式结构存储
@@ -131,5 +137,9 @@
 
 ###### 循环链表
 
+
+
 ###### 双向链表
+
+
 
