--- a/数据结构.md
+++ b/数据结构.md
@@ -27,8 +27,6 @@
 
 
 
-
-
 ### 算法
 
 算法是解决特定问题步骤的描述。
@@ -87,7 +85,7 @@
 
 
 
-### 数组和链表(线性表)(选择排序算法)
+### 1 数组和链表(线性表)(选择排序算法)
 
 线性表：零或多个数据元素的有限序列
 
@@ -153,4 +151,104 @@
 ###### 双向链表
 
 在单链表的基础上添加一个前区指针。
+
+
+
+
+
+
+
+### 2 栈和队列
+
+栈(LIFO)和队列(FIFO)都是线性表
+
+栈是只允许在表尾进行插入和删除的线性表
+
+队列是只允许在一端进行插入，在另一端进行删除的线性表
+
+##### 栈的抽象数据类型
+
+栈操作：
+
+- 初始化栈
+- 销毁栈
+- 判断栈是否为空
+- 获取栈的长度
+- 清空栈
+- 获取栈顶
+- 入栈
+- 出栈
+
+通常，空栈的长度定义为-1
+
+栈的数据结构
+
+```c
+struct stack_t
+{
+    type data[MAX_SIZE];
+    int top;
+}
+```
+
+##### 两栈共享空间
+
+数据的两端作为栈底，两个栈顶指针。当两个栈顶指针相差1时，栈满。
+
+数据结构
+
+```c
+struct stack_t
+{
+    type data[MAX_SIZE];
+    int top1;
+    int top2;
+}
+```
+
+
+
+栈操作带着栈标号，指明操作的时哪一个栈
+
+使用场景：两个栈的空间需求具有相反的关系
+
+##### 栈的链式结构存储
+
+相比较顺序存储结构的栈，链栈不用定义栈的空间，空间大小是动态的。
+
+##### 栈的作用
+
+划分不同的关注层次，使思考范围缩小
+
+##### 栈的应用
+
+- 递归
+
+  - 斐波那契数列的实现
+
+- 四则运算表达式求值
+
+  - 后缀表示法定义（逆波兰）
+
+    后缀表达式是所有的运算符出现在数据的后面。
+
+    平时标准的四则运算成为中则表达式，因为运算符都出现在 数据的而中间
+
+  - 后缀表达式规则
+
+    >从左到右依次进栈，遇到符号就把栈顶两个据去出根据符号进行运算，第一个数据最为左操作数，第二个数据作为右操作数，运算结果再进栈，然后依次进栈后面的数据和符号，直到结束。
+    >
+    >例如：9 3 1 - 3 * + 10 2 / + 的计算结果为20
+
+  - 中缀表达式转后缀表达式
+
+    > 从中缀表达式的左到右，依次输出数字，若为符号，并且该符号的优先级低于栈顶符号的优先级或为右括号，则栈顶符号依次出栈并输出直到左括号或优先级低于当前符号，并且将当前符号入栈，直到最后。
+
+
+
+
+
+
+
+
 
