--- a/数据结构.md
+++ b/数据结构.md
@@ -243,6 +243,16 @@ struct stack_t
   - 中缀表达式转后缀表达式
 
     > 从中缀表达式的左到右，依次输出数字，若为符号，并且该符号的优先级低于栈顶符号的优先级或为右括号，则栈顶符号依次出栈并输出直到左括号或优先级低于当前符号，并且将当前符号入栈，直到最后。
+    >
+    >
+    >
+    > 例如：
+    >
+    > 9+（3-1）*3+10/2  后缀表达式 9 3 1 - 3 * + 10 2 / +   计算结果20
+    >
+    > 3-2+1+4-9                后缀表达式 3 2 - 1 + 4  + 9 -    计算结果 -3
+    >
+    > 3-（2+1）+（4-9）后缀表达式 3 2 1 + - 4  9 - +    计算结果 -5
 
 
 
