--- a/地理学与生活.md
+++ b/地理学与生活.md
@@ -1,7 +1,7 @@
 ### 地理学与生活
 
 - 地理学： 研究空间格局如何随着时间形成的科学，是研究空间和空间所纳事物的科学。地理学是各种兴趣的结合。
-- 地理学是一门空间学，他关注的是空间分布现象，区域的空间范围，人们的空间行为，地球表面个地方之间的空间关系，以及行为和关系之间的空间过程。
+- 地理学是一门空间学，他关注的是空间分布现象，区域的空间范围，人们的空间行为，地球表面各地方之间的空间关系，以及行为和关系之间的空间过程。
 - 古希腊地理学家率先提出地理学
 - 区域： 重要元素内部一致性与周围低于外部差异的地方。
 
@@ -11,7 +11,20 @@
 
 
 
+### 地理学工具
 
+- 地图
+- 网格系统，经度、纬度、本初子午线、日界时
+- 全球定位系统GPS
+- 地图投影：等积投影、正形投影、方位投影、等距投影
+
+
+
+### 自然地理学
+
+#### 地球物质
+
+岩石根据行成过程分为**火成岩** 、**沉积岩**、**变质岩**
 
 
 
