--- a/《系统程序员成长计划》笔记.md
+++ b/《系统程序员成长计划》笔记.md
@@ -168,7 +168,7 @@ extern int list_empty(struct list_head *entry);
 
 - 内存泄漏：嵌入式系统是致命的
 - 内存越界
-  - 读越界：读取的内存地址无效，立马崩溃；读取的地址有效，不会崩溃，单独去的值是随机的，会有意想不到的结果
+  - 读越界：读取的内存地址无效，立马崩溃；读取的地址有效，不会崩溃，但取的值是随机的，会有意想不到的结果
   - 写越界：缓冲区溢出，写的地址会造成别的程序意想不到的结果
 - 野指针
 - 访问空指针
