--- a/数据结构.md
+++ b/数据结构.md
@@ -256,9 +256,43 @@ struct stack_t
 
 
 
+### 排序
+
+- 稳定排序，不稳定排序
+
+- 内排序、外排序
+
+  - 内排序
+
+    - 时间性能：少比较，少移动
+
+    - 空间性能：
+
+内排序分为：插入排序、选择排序、交换排序、归并排序
+
+简单排序算法：冒泡排序(一种交换排序)、简单选择排序、直接插入排序
+
+改进排序算法：希尔排序、堆排序、归并排序、快速排序
 
 
 
+- 冒泡排序（bubble sort）(O(n^2))
+
+  相邻比较，小的值往上冒
+
+  一种选择排序，有很多变种
+
+  改进1：添加一个flag,当没有相邻数据交换了，就认为排序完成了，外层循环结束
+
+- 简单选择排序（O(n^2)）
+
+  通过n-i次关键字之间的比较，从n-i+1个记录中选出关键字最小的记录，并和第i个记录交换
+
+  简单选择排序移动次数明显减少
+
+- 直接插入排序（O（n^2））
+
+- 希尔排序
 
 
 
